--- a/src/components/CardsList/CardsList.css
+++ b/src/components/CardsList/CardsList.css
@@ -2,6 +2,7 @@
     padding-top: 16px;
     min-height: 50vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -10,6 +11,7 @@
 
 .pagination {
     display: flex;
+    flex-basis: 100%;
     justify-content: center;
     margin-top: 37px;
   }
