--- a/src/components/CardFilm/CardFilm.css
+++ b/src/components/CardFilm/CardFilm.css
@@ -1,4 +1,9 @@
+
+
+
 .cardFilm{
+
+    box-sizing: border-box; 
     display: flex;
     height: 280px;
     overflow: hidden;
@@ -18,10 +23,11 @@
 .cardFilm__content{
     display: flex;
     flex-direction: column;
-    gap: 7px;
+    /* gap: 7px; */
     padding: 10px 20px;
     flex-basis: 454px;
     flex-grow: 2;
+    justify-content: space-between;
 }
 
 .cardFilm__header {
@@ -55,6 +61,9 @@
     font-family: Inter;
     font-size: 12px;
     line-height: 22px;
+
+    /* !!!! */
+    /* margin-left: 5px; */
 }
 
 .cardFilm__buttons {
@@ -70,6 +79,9 @@
     line-height: 14.52px;
     font-family: 'Inter';
     height: 20px;
+/* !!!!! */
+    /* margin-right: 8px; */
+    /* margin-bottom: 8px; */
 }
 
 .cardFilm__date{
@@ -77,21 +89,25 @@
     font-size: 12px;
     line-height: 22px;
     color: #827E7E;
+
+    /* !!!!! */
+    /* margin-bottom: 7px; */
 }
+
 
 .cardFilm__overview{
     font-size: 12px;
     line-height: 22px; 
     font-family: 'Inter';
     margin: 0;
-    /*чуть похже уберём*/
+    /*чуть похже*/
     overflow: hidden;
 } 
 
 .cardFilm__stars {
     display: flex;
     margin-bottom: 5px;
-    margin-top: auto;
+    /* margin-top: auto; */
 }
 
 .cardFilm__stars  .ant-rate-star:not(:last-child) {
